Added information for the doctors information
